improve responsive style of boxes on small devices to ensure next button is above the fold

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,6 @@ input {
 .btn {
     border-radius: 0.3rem;
     border: none;
-    margin: 20px;
     width: 300px;
     height: 50px;
     box-shadow: 0 0 10px 5px;
@@ -363,7 +362,7 @@ button:disabled {
     }
             
     .answers {
-        height: 80px;
+        height: 50px;
         width: 130px;
         margin: 0px;
         border: solid 2px black;
@@ -372,8 +371,8 @@ button:disabled {
     }
 
     .score-box {
-        height: 50px;
-        width: 200px;
+        height: 30px;
+        width: 150px;
         font-size: 0.9rem;   
     }
 
@@ -405,7 +404,7 @@ button:disabled {
 
     #question-box {  
         font-size: 26px;  
-  
+        min-height: 100px;
     }
 
     .fact {
